[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/GGS/assets/icons/types/bool.svg" type="Texture" id=1]
[ext_resource path="res://addons/GGS/assets/icons/remove_key.svg" type="Texture" id=2]
[ext_resource path="res://systems/cfc/builder/key/LabelName.gd" type="Script" id=3]
[ext_resource path="res://systems/cfc/builder/key/OptionSelection.gd" type="Script" id=4]
[ext_resource path="res://systems/cfc/builder/key/uiArgs.gd" type="Script" id=5]

[node name="HBoxContainer2" type="HBoxContainer"]
margin_right = 354.0
margin_bottom = 28.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArgNameLabel" type="Label" parent="."]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 23.0
text = "arg name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArgName" type="LineEdit" parent="."]
margin_left = 70.0
margin_right = 135.0
margin_bottom = 28.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="ArgValueLabel" type="Label" parent="."]
margin_left = 139.0
margin_top = 5.0
margin_right = 204.0
margin_bottom = 23.0
text = "arg value:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArgValue" type="LineEdit" parent="."]
margin_left = 208.0
margin_right = 273.0
margin_bottom = 28.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="ArgValueType" type="OptionButton" parent="."]
margin_left = 277.0
margin_right = 322.0
margin_bottom = 28.0
icon = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Remove" type="Button" parent="."]
margin_left = 326.0
margin_right = 354.0
margin_bottom = 28.0
hint_tooltip = "Remove Key"
icon = ExtResource( 2 )

[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
